# FaceDetector

./: .gitignore  CMakeLists.txt
include/: BlurDrawer.h  FaceDetector.h
src/: BlurDrawer.cpp  FaceDetector.cpp  main.cpp  main_B.cpp  main_C.cpp
